<resources>
    <string name="app_name">Jooka test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_post">Delete post</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="signup">Sign up</string>
    <string name="don_t_have_account">Do not have account ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
</resources>