<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/MainBackground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/delete_post"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/text_title_size"
                android:textColor="@color/main_color_200"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_margin="@dimen/semi_big_margin"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Do you really want to delete this post ?"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_margin="@dimen/semi_big_margin"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="#1 - Post title"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_margin="@dimen/semi_big_margin"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:autoLink="all"
            android:ellipsize="end"
            android:linksClickable="true"
            android:maxLines="1"
            android:layout_margin="@dimen/semi_big_margin"
            android:text="@string/no"
            app:backgroundTint="@color/red_500"
            android:layout_gravity="center"
            android:gravity="center" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:autoLink="all"
            android:ellipsize="end"
            android:linksClickable="true"
            android:maxLines="1"
            android:layout_margin="@dimen/semi_big_margin"
            android:text="@string/yes"
            app:backgroundTint="@color/main_color_200"
            android:layout_gravity="center"
            android:gravity="center" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>